compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__do_not_suggest_wrapping_in_ok_if_expected_ok_type_is_unbound.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type SomeError {\n  WibbleError\n}\n\npub type OtherError {\n  WobbleError\n}\n\npub fn main() {\n  wibble(wobble(todo))\n}\n\npub fn wobble(arg: a) -> Result(a, SomeError) {\n  todo\n}\n\npub fn wibble(arg: Result(a, OtherError)) -> a {\n  todo\n}"
---
----- SOURCE CODE

pub type SomeError {
  WibbleError
}

pub type OtherError {
  WobbleError
}

pub fn main() {
  wibble(wobble(todo))
}

pub fn wobble(arg: a) -> Result(a, SomeError) {
  todo
}

pub fn wibble(arg: Result(a, OtherError)) -> a {
  todo
}

----- ERROR
error: Type mismatch
   ┌─ /src/one/two.gleam:11:10
   │
11 │   wibble(wobble(todo))
   │          ^^^^^^^^^^^^

Expected type:

    Result(a, OtherError)

Found type:

    Result(a, SomeError)
