compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_const_and_function_names_const_fn_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const duplicate = 1\nfn duplicate() { 2 }\nfn duplicate() { 3 }"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:7
  │
1 │ const duplicate = 1
  │       ^^^^^^^^^ First defined here
2 │ fn duplicate() { 2 }
  │ ^^^^^^^^^^^^^^ Redefined here

`duplicate` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

