compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_const_and_function_names_fn_const_const.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn duplicate() { 1 }\nconst duplicate = 2\nconst duplicate = 3"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ fn duplicate() { 1 }
  │ ^^^^^^^^^^^^^^ First defined here
2 │ const duplicate = 2
  │       ^^^^^^^^^ Redefined here

`duplicate` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

