compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_fn_extfn_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn foo() { 1 }\nexternal fn foo() -> Float =\n  \"module2\" \"function2\"\nfn foo() { 3 }"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │  
1 │   fn foo() { 1 }
  │   ^^^^^^^^ First defined here
2 │ ╭ external fn foo() -> Float =
3 │ │   "module2" "function2"
  │ ╰───────────────────────^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

