compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_type_names.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: type X = Int type X = Int

---

error: Duplicate type definition with name `X`
  ┌─ /src/one/two.gleam:1:14
  │
1 │ type X = Int type X = Int
  │ ------------ ^^^^^^^^^^^^ redefined here
  │ │             
  │ previously defined here


