compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__error_does_not_expand_alias_for_non_function_shape_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Request = List(Int)\n\npub fn main(request: Request) {\n  request()\n}\n"
---
----- SOURCE CODE

pub type Request = List(Int)

pub fn main(request: Request) {
  request()
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:3
  │
5 │   request()
  │   ^^^^^^^

This value is being called as a function but its type is:

    Request
